# TL-DPS-Meter

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DECISIONS.md  HOW-TO-USE.txt  README.md  SECURITY.md  index.html  join.html  party_render.js  skills_canonical.json  weapon_config.json
.github/workflows/: ci.yml  refresh-gamedata.yml  release-build.yml
backend/: .gitignore  TL-DPS-Meter.spec  build.py  combat_stats.py  constants.py  debug.py  dps_meter_server.py  encounter_boundary.py  encounter_scan.py  log_watcher.py  main.py  party_state.py  pyproject.toml  version_info.txt
backend/assets/: make_icon.py
backend/fixtures/: party_multiboss_sample.txt
backend/installer/: TL-DPS-Meter.iss
backend/tests/: conftest.py  test_clear_party_regression.py  test_client_debug_event_key.py  test_encounter_boundary.py  test_encounter_scan.py  test_gui_commands.py  test_lane_d_gate.py  test_log_status_banner.py  test_log_watcher.py  test_main.py  test_multiphase_boss_undercount.py  test_packaging.py  test_party_auto_arm.py  test_party_posting.py  test_party_segmentation_reallog.py  test_party_state.py  test_party_state_encounters.py  test_refresh_game_data.py  test_server.py  test_single_instance.py  test_stats_new_aggregations.py
backend/tools/: SIM-FULL.bat  _brand_stragglers.py  _l3_lift.py  _slate_sweep.py  analytics.mjs  fake_combat_log.py  obs_rooms.mjs  refresh_game_data.py  sim_party.py
docs/: BAN-RISK.md  CI-DESIGN.md  OBSERVABILITY.md  ROADMAP.md
img/: hero-loop.webm
overlay/src/: index.html
overlay/src-tauri/: Cargo.toml  tauri.conf.json
overlay/src-tauri/capabilities/: default.json
overlay/src-tauri/src/: lib.rs  main.rs
src/js/: party.js  (+11 more)
(+63 files in other folders)
