[project]
name = "tl-dps-meter-backend"
version = "0.1.0"
description = "TL-DPS-Meter backend (clean rebuild) — combat-log parser, stats core, WebSocket server"
requires-python = ">=3.11"
dependencies = [
    "pywebview>=6.2.1",
    "watchdog>=6.0.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "pytest>=8",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
# Make the backend modules and the parity harness importable from tests.
pythonpath = [".", "tools"]
addopts = "-q"
